--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
