--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
     "express": "^4.21.0",
+    "mongoose": "^8.8.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
