--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "csv-parse": "^5.5.6",
     "express": "^4.21.0",
     "mongoose": "^8.8.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.4.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
