--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "description": "NASA Mission Control API",
   "dependencies": {
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
     "express": "^4.21.0",
